<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Actvities.telas.ClientesActivity"
    tools:ignore="Autofill">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carro:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Motorista:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idKm" />

        <EditText
            android:id="@+id/idNome"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_nome"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/idModelo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_Modelo"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/idPlaca"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_Placa"
            android:inputType="text"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idModelo" />

        <EditText
            android:id="@+id/idKm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_Quilometragem"
            android:inputType="number"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idPlaca" />

        <EditText
            android:id="@+id/idCPF"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_CPF"
            android:inputType="number"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idNome" />

        <EditText
            android:id="@+id/idCNH"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_CNH"
            android:inputType="number"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCPF" />

        <EditText
            android:id="@+id/idCelular"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:ems="10"
            android:hint="@string/txt_campo_celular"
            android:inputType="phone"
            android:paddingStart="@dimen/paddgin_start"
            android:paddingEnd="@dimen/paddgin_end"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCNH" />

        <Button
            android:id="@+id/idBtnCadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/personalizar_borda"
            android:onClick="cadastroCliente"
            android:text="@string/btn_cadastro"
            android:textColor="@android:color/black"
            android:textSize="@dimen/texto_padrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCelular" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
