<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idScrollLayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:fillViewport="true"
    tools:context=".Actvities.telas.MainActivity">
<!--activity Principal-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="329dp"
            android:layout_height="91dp"
            android:gravity="center"
            android:text="Seja bem vindo Alan, Oque vamos fazer?"
            android:textSize="@dimen/tamanho_titulo"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/idLinearLayout01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.474" />

        <LinearLayout
            android:id="@+id/idLinearLayout01"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/personalizar_borda"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/idLinearLayout02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/idTxtCadastro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/titulo_cadastro"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanho_titulo"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearLayout02"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/personalizar_borda"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/idLinearLayout03"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idLinearLayout01">

            <TextView
                android:id="@+id/idTxtListar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/titulo_visuaizar"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanho_titulo"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearLayout03"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/personalizar_borda"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idLinearLayout02">

            <TextView
                android:id="@+id/idTxtAlterarCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center"
                android:text="@string/titulo_fotos"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tamanho_titulo"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>